fix: bottom padding in SettingsView when overflow (#414)

--- a/ui/src/views/settings/SettingsView.module.scss
+++ b/ui/src/views/settings/SettingsView.module.scss
@@ -21,7 +21,6 @@
   gap: 3rem;
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
 
 .row {
